# Agentfirst

./: README.md  pyproject.toml
src/enhanced_rag_persona_chatbot_with_linkedin_integration/: crew.py  main.py
src/enhanced_rag_persona_chatbot_with_linkedin_integration/config/: agents.yaml  tasks.yaml
