[project]
name = "enhanced_rag_persona_chatbot_with_linkedin_integration"
version = "0.1.0"
description = "enhanced_rag_persona_chatbot_with_linkedin_integration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
enhanced_rag_persona_chatbot_with_linkedin_integration = "enhanced_rag_persona_chatbot_with_linkedin_integration.main:run"
run_crew = "enhanced_rag_persona_chatbot_with_linkedin_integration.main:run"
train = "enhanced_rag_persona_chatbot_with_linkedin_integration.main:train"
replay = "enhanced_rag_persona_chatbot_with_linkedin_integration.main:replay"
test = "enhanced_rag_persona_chatbot_with_linkedin_integration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
